# trane-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
src/: app.rs  cli.rs  display.rs  helper.rs  main.rs  repository_manager.rs  simple_build.rs  transcription_downloader.rs
