[package]
edition = "2021"
name = "trane-cli"
version = "0.23.2"
build = "build.rs"
default-run = "trane"

[[bin]]
name = "trane"
path = "src/main.rs"

[[bin]]
name = "trane-simple-build"
path = "src/simple_build.rs"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
indoc = "2.0.6"
rand = "0.9.1"
rustyline = "15.0.0"
rustyline-derive = "0.11.0"
serde_json = "1.0.140"
termimad = "0.31.3"
trane = "0.23.3"
ustr = { version = "1.1.0", features = ["serde"] }
# Commented out for use in local development.
# trane = { path = "../trane" }

[build-dependencies]
built = { version = "0.7.7", features = ["chrono", "dependency-tree", "git2", "semver"] }
