[package]
edition = "2021"
name = "trane-cli"
version = "0.26.0"
build = "build.rs"
default-run = "trane"

[[bin]]
name = "trane"
path = "src/main.rs"

[[bin]]
name = "trane-simple-build"
path = "src/simple_build.rs"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.46", features = ["derive"] }
hex = "0.4.3"
fs_extra = "1.3.0"
git2 = "0.20.2"
indoc = "2.0.6"
rand = "0.9.2"
sha1 = "0.10.6"
serde = "1.0.219"
rustyline = "17.0.1"
rustyline-derive = "0.11.1"
tempfile = "3.21.0"
serde_json = "1.0.143"
termimad = "0.33.0"
trane = "0.26.0"
ustr = { version = "1.1.0", features = ["serde"] }
url = "2.5.7"
# Commented out for use in local development.
# trane = { path = "../trane" }

[build-dependencies]
built = { version = "0.8.0", features = ["chrono", "dependency-tree", "git2", "semver"] }

[profile.release]
strip = true
