[package]
edition = "2021"
name = "trane-cli"
version = "0.28.0"
build = "build.rs"
default-run = "trane"

[[bin]]
name = "trane"
path = "src/main.rs"

[[bin]]
name = "trane-simple-build"
path = "src/simple_build.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
hex = "0.4.3"
fs_extra = "1.3.0"
git2 = "0.20.4"
indoc = "2.0.7"
rand = "0.10.0"
sha1 = "0.10.6"
serde = "1.0.228"
rustyline = "17.0.2"
rustyline-derive = "0.11.1"
tempfile = "3.27.0"
serde_json = "1.0.149"
termimad = "0.34.1"
trane = "0.28.0"
# Commented out for use in local development.
# trane = { path = "../trane" }
ustr = { version = "1.1.0", features = ["serde"] }
url = "2.5.8"

[build-dependencies]
built = { version = "0.8.0", features = ["chrono", "dependency-tree", "git2", "semver"] }

[profile.release]
strip = true
